force-app/main/default/objects/Interaction__c/Interaction__c.object-meta.xml
<CustomObject>
    <description>Object to record executive interactions</description>
    <label>Interaction</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>