force-app/main/default/objects/Interaction__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship with the entity User</description>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>