force-app/main/default/objects/Interaction__c/fields/AsignationDate__c.field-meta.xml
<CustomField>
    <fullName>AsignationDate__c</fullName>
    <description>Date/hour where an interaction changes form a queue to a user</description>
    <label>Asignation date</label>
    <type>DateTime</type>
</CustomField>