force-app/main/default/objects/Interaction__c/fields/AssignationDateSS__c.field-meta.xml
<CustomField>
    <fullName>AssignationDateSS__c</fullName>
    <description>Assignation Date with Seconds</description>
    <formula>TEXT(Day( DATEVALUE(AsignationDate__c) ))&amp;&quot;/&quot;&amp; TEXT(Month( DATEVALUE(AsignationDate__c) )) &amp; &quot;/&quot; &amp; TEXT(Year( DATEVALUE(AsignationDate__c) )) &amp; &quot; &quot; &amp; 
TEXT(VALUE(MID( TEXT(AsignationDate__c), 12, 2 ))-5) 
&amp; &quot;:&quot; &amp; 
MID( TEXT(AsignationDate__c), 15, 2 ) 
&amp; &quot;:&quot; &amp; 
MID( TEXT(AsignationDate__c), 18, 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date format: DD/MM/YYYY - HH:MM:SS</inlineHelpText>
    <label>AssignationDateSS</label>
    <type>Text</type>
</CustomField>