force-app/main/default/objects/Interaction__c/fields/AttentionTime__c.field-meta.xml
<CustomField>
    <fullName>AttentionTime__c</fullName>
    <label>Attention Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>