force-app/main/default/objects/Interaction__c/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <description>Duración de la llamada que generó la interacción</description>
    <inlineHelpText>Este campo se informa si la interaccion se crea proveniente de una llamada del CTI</inlineHelpText>
    <label>Call Duration</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>