force-app/main/default/objects/Interaction__c/fields/Called__c.field-meta.xml
<CustomField>
    <fullName>Called__c</fullName>
    <description>Campo que informa el número de teléfono del operador</description>
    <label>Called</label>
    <length>100</length>
    <type>Text</type>
</CustomField>