force-app/main/default/objects/Interaction__c/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <description>Campo que informa el número de teléfono del cliente que llama</description>
    <label>Caller</label>
    <length>100</length>
    <type>Text</type>
</CustomField>