force-app/main/default/objects/Interaction__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <length>100</length>
    <type>Text</type>
</CustomField>