force-app/main/default/objects/Interaction__c/fields/Codigo_Agente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Agente__c</fullName>
    <label>Codigo Agente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>