force-app/main/default/objects/Interaction__c/fields/CustomerMoveTime__c.field-meta.xml
<CustomField>
    <fullName>CustomerMoveTime__c</fullName>
    <label>Customer Move Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>