force-app/main/default/objects/Interaction__c/fields/DurationSS__c.field-meta.xml
<CustomField>
    <fullName>DurationSS__c</fullName>
    <description>Duration of Interaction with Seconds</description>
    <inlineHelpText>Format: HH Hours, MM Minutes, SS Seconds</inlineHelpText>
    <label>DurationSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>