force-app/main/default/objects/Interaction__c/fields/FinishDate__c.field-meta.xml
<CustomField>
    <fullName>FinishDate__c</fullName>
    <description>Indicates the finish date of the interaction</description>
    <label>Finish Date</label>
    <type>DateTime</type>
</CustomField>