force-app/main/default/objects/Interaction__c/fields/InserviceSentError__c.field-meta.xml
<CustomField>
    <fullName>InserviceSentError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that an error in Inservice call has taken place</description>
    <label>Inservice Sent Error</label>
    <type>Checkbox</type>
</CustomField>