force-app/main/default/objects/Interaction__c/fields/Interaction_Origin__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Origin__c</fullName>
    <label>Interaction Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IO001</fullName>
            </value>
            <value>
                <fullName>IO002</fullName>
            </value>
            <value>
                <fullName>IO003</fullName>
            </value>
            <value>
                <fullName>Canales Digitales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>