force-app/main/default/objects/Interaction__c/fields/No_Transit_Attention_Time__c.field-meta.xml
<CustomField>
    <fullName>No_Transit_Attention_Time__c</fullName>
    <formula>IF( OR(QSF_Forwarding_Time_Acc__c=0, ISBLANK(QSF_Forwarding_Time_Acc__c) , ISNULL(QSF_Forwarding_Time_Acc__c) ) , 
(FinishDate__c -  Call_Date__c   )*24*60*60, 
((FinishDate__c -  Call_Date__c   )*24*60*60 +  QSF_Forwarding_Time_Acc__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Transit Attention Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>