force-app/main/default/objects/Interaction__c/fields/No_Transit_Attention_Time_Quenda__c.field-meta.xml
<CustomField>
    <fullName>No_Transit_Attention_Time_Quenda__c</fullName>
    <formula>IF(
    OR(QSF_Forwarding_Time_Acc__c =0, ISBLANK(QSF_Forwarding_Time_Acc__c) ) ,
  TEXT( FLOOR( (FinishDate__c  -   Call_Date__c) )) &amp; &quot; Días &quot;
  &amp; TEXT( FLOOR( MOD( (FinishDate__c  -  Call_Date__c) * 24, 24 ) ) ) &amp; &quot; horas &quot;
  &amp; TEXT( FLOOR( MOD( (FinishDate__c  -  Call_Date__c)* 24 * 60, 60 ) ) ) &amp; &quot; minutos &quot;
 &amp; TEXT( ROUND( MOD( (FinishDate__c  -  Call_Date__c)* 24 * 60 * 60, 60 ), 0 ) ) &amp; &quot; segundos&quot;,
   IF( AND(QSF_Forwarding_Time_Acc__c  &lt;&gt; 0,  NOT(ISBLANK(QSF_Forwarding_Time_Acc__c))) ,
 TEXT( ROUND(No_Transit_Attention_Time__c/86400,0)) &amp; &quot; Días &quot; +
TEXT(FLOOR(MOD(No_Transit_Attention_Time__c/3600,24))) + &quot; horas &quot; + 
TEXT( FLOOR(MOD(No_Transit_Attention_Time__c,3600)/60)) + &quot; minutos &quot; +   
TEXT(ROUND(MOD(MOD(No_Transit_Attention_Time__c,3600),60),0)) + &quot; segundos&quot;
, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Transit Attention Time Quenda</label>
    <type>Text</type>
</CustomField>