force-app/main/default/objects/Interaction__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>Office</description>
    <inlineHelpText>Cola/oficina</inlineHelpText>
    <label>Office</label>
    <length>150</length>
    <type>Text</type>
</CustomField>