force-app/main/default/objects/Interaction__c/fields/OfficeQ__c.field-meta.xml
<CustomField>
    <fullName>OfficeQ__c</fullName>
    <formula>Owner:Queue.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OfficeQ</label>
    <type>Text</type>
</CustomField>