force-app/main/default/objects/Interaction__c/fields/PointofDelivery__c.field-meta.xml
<CustomField>
    <fullName>PointofDelivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Point of delivery.</description>
    <inlineHelpText>Suministro asociado</inlineHelpText>
    <label>Point of Delivery</label>
    <referenceTo>PointofDelivery__c</referenceTo>
    <relationshipLabel>Interacciones</relationshipLabel>
    <relationshipName>Interacciones</relationshipName>
    <type>Lookup</type>
</CustomField>