force-app/main/default/objects/Interaction__c/fields/Primer_VDN__c.field-meta.xml
<CustomField>
    <fullName>Primer_VDN__c</fullName>
    <label>Caso Creado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>