force-app/main/default/objects/Interaction__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>priority</description>
    <inlineHelpText>Prioridad</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>N2</fullName>
            </value>
            <value>
                <fullName>N1</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>