force-app/main/default/objects/Interaction__c/fields/QSF_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>QSF_Appointment_Id__c</fullName>
    <label>Appointment</label>
    <type>TextArea</type>
</CustomField>