force-app/main/default/objects/Interaction__c/fields/QSF_Attention_Time_min_Quenda__c.field-meta.xml
<CustomField>
    <fullName>QSF_Attention_Time_min_Quenda__c</fullName>
    <formula>IF( OR(QSF_Forwarding_Time_Acc__c=0, ISBLANK(QSF_Forwarding_Time_Acc__c) , ISNULL(QSF_Forwarding_Time_Acc__c) ) , 
(FinishDate__c - StartDate__c )*24*60, 
((FinishDate__c - StartDate__c )*24*60 + (QSF_Forwarding_Time_Acc__c)/60) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attention Time (min) Quenda</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>