force-app/main/default/objects/Interaction__c/fields/QSF_Attention_Time_sec_Quenda__c.field-meta.xml
<CustomField>
    <fullName>QSF_Attention_Time_sec_Quenda__c</fullName>
    <formula>IF( AND(ISPICKVAL(Status__c,&apos;ESTA005&apos;),QSF_Forwarding_Time_Acc__c=0) ,0,(FinishDate__c - StartDate__c )*24*60*60 + QSF_Forwarding_Time_Acc__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attention Time (sec) Quenda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>