force-app/main/default/objects/Interaction__c/fields/QSF_Comments__c.field-meta.xml
<CustomField>
    <fullName>QSF_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>