force-app/main/default/objects/Interaction__c/fields/QSF_Forwarding_Time_Acc__c.field-meta.xml
<CustomField>
    <fullName>QSF_Forwarding_Time_Acc__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QSF Forwarding Time Acc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>