force-app/main/default/objects/Interaction__c/fields/QSF_Printing_Ticket_Time__c.field-meta.xml
<CustomField>
    <fullName>QSF_Printing_Ticket_Time__c</fullName>
    <description>Hora de impresion de ticket</description>
    <label>QSF Printing Ticket Time</label>
    <type>DateTime</type>
</CustomField>