force-app/main/default/objects/Interaction__c/fields/QSF_Procedure__c.field-meta.xml
<CustomField>
    <fullName>QSF_Procedure__c</fullName>
    <label>Procedure</label>
    <length>50</length>
    <type>Text</type>
</CustomField>