force-app/main/default/objects/Interaction__c/fields/QSF_Reason__c.field-meta.xml
<CustomField>
    <fullName>QSF_Reason__c</fullName>
    <label>Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>