force-app/main/default/objects/Interaction__c/fields/QSF_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>QSF_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ST001</fullName>
            </value>
            <value>
                <fullName>ST002</fullName>
            </value>
            <value>
                <fullName>ST003</fullName>
            </value>
            <value>
                <fullName>ST004</fullName>
                <label>Call Center</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>