force-app/main/default/objects/Interaction__c/fields/QSF_Waiting_Time__c.field-meta.xml
<CustomField>
    <fullName>QSF_Waiting_Time__c</fullName>
    <label>Waiting Time Quenda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>