force-app/main/default/objects/Interaction__c/fields/QSF_Waiting_Time_min__c.field-meta.xml
<CustomField>
    <fullName>QSF_Waiting_Time_min__c</fullName>
    <formula>(StartDate__c - AsignationDate__c)*24*60</formula>
    <label>Waiting Time (min) Quenda</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>