force-app/main/default/objects/Interaction__c/fields/QSF_Waiting_Time_mins__c.field-meta.xml
<CustomField>
    <fullName>QSF_Waiting_Time_mins__c</fullName>
    <formula>StartDate__c -  AsignationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waiting Time (mins) Quenda</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>