force-app/main/default/objects/Interaction__c/fields/QSF_Waiting_Time_sec__c.field-meta.xml
<CustomField>
    <fullName>QSF_Waiting_Time_sec__c</fullName>
    <formula>(StartDate__c - AsignationDate__c)*24*60*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waiting Time (sec) Quenda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>