force-app/main/default/objects/Interaction__c/fields/QSF_Waiting_Time_text__c.field-meta.xml
<CustomField>
    <fullName>QSF_Waiting_Time_text__c</fullName>
    <formula>TEXT( FLOOR( (StartDate__c- AsignationDate__c) )) &amp; &quot; Días &quot; 
&amp; TEXT( FLOOR( MOD( (StartDate__c- AsignationDate__c) * 24, 24 ) ) ) &amp; &quot; horas &quot; 
&amp; TEXT( FLOOR( MOD( (StartDate__c- AsignationDate__c)* 24 * 60, 60 ) ) ) &amp; &quot; minutos &quot; 
&amp; TEXT( FLOOR( MOD(ROUND(( (StartDate__c- AsignationDate__c)* 24 * 60 * 60),2), 60 ) ) ) &amp; &quot; segundos&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waiting Time Quenda</label>
    <type>Text</type>
</CustomField>