force-app/main/default/objects/Interaction__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>reason</description>
    <inlineHelpText>Motivo</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>62</fullName>
            </value>
            <value>
                <fullName>63</fullName>
            </value>
            <value>
                <fullName>66</fullName>
            </value>
            <value>
                <fullName>68</fullName>
            </value>
            <value>
                <fullName>69</fullName>
            </value>
            <value>
                <fullName>67</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>71</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>73</fullName>
            </value>
            <value>
                <fullName>74</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>76</fullName>
            </value>
            <value>
                <fullName>77</fullName>
            </value>
            <value>
                <fullName>78</fullName>
            </value>
            <value>
                <fullName>79</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>BR01</fullName>
            </value>
            <value>
                <fullName>BR02</fullName>
            </value>
            <value>
                <fullName>BR03</fullName>
            </value>
            <value>
                <fullName>BR04</fullName>
            </value>
            <value>
                <fullName>BR05</fullName>
            </value>
            <value>
                <fullName>BR06</fullName>
            </value>
            <value>
                <fullName>ErrorCol_A</fullName>
            </value>
            <value>
                <fullName>ErrorCol_B</fullName>
            </value>
            <value>
                <fullName>ErrorCol_C</fullName>
            </value>
            <value>
                <fullName>81</fullName>
            </value>
            <value>
                <fullName>82</fullName>
            </value>
            <value>
                <fullName>83</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>