force-app/main/default/objects/Interaction__c/fields/RecordingFileName__c.field-meta.xml
<CustomField>
    <fullName>RecordingFileName__c</fullName>
    <label>RecordingFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>