force-app/main/default/objects/Interaction__c/fields/RecordingURL__c.field-meta.xml
<CustomField>
    <fullName>RecordingURL__c</fullName>
    <formula>IF(
	AND(
		NOT(ISNULL(RecordingFileName__c)), 
		NOT(ISBLANK(RecordingFileName__c))
	) , 
	HYPERLINK(&quot;file:///&quot; &amp; SUBSTITUTE($Label.ATCL_RecordingURL, &quot;\\&quot;, &quot;/&quot;) &amp; RecordingFileName__c, &quot;Archivo de grabación&quot;, &quot;_blank&quot;), 
	&quot;&quot;
)</formula>
    <label>Recording URL</label>
    <type>Text</type>
</CustomField>