force-app/main/default/objects/Interaction__c/fields/ServiceErrorTrace__c.field-meta.xml
<CustomField>
    <fullName>ServiceErrorTrace__c</fullName>
    <label>Service Error Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>