force-app/main/default/objects/Interaction__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>010</fullName>
                <label>Emergencia Konecta</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>Emergencia Upcom</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>BACK OFFICE Chilectra</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>Comercial Konecta</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>Comercial Upcom</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>GG.CC</label>
            </value>
            <value>
                <fullName>016</fullName>
                <label>PRIORITARIOS</label>
            </value>
            <value>
                <fullName>017</fullName>
                <label>Electrica Colina</label>
            </value>
            <value>
                <fullName>018</fullName>
                <label>LOG SUPERVISORES</label>
            </value>
            <value>
                <fullName>019</fullName>
                <label>Post Venta Upcom</label>
            </value>
            <value>
                <fullName>022</fullName>
                <label>Ventas Upcom</label>
            </value>
            <value>
                <fullName>023</fullName>
                <label>Alumbrado publico</label>
            </value>
            <value>
                <fullName>024</fullName>
                <label>IVR Fonoservicio</label>
            </value>
            <value>
                <fullName>025</fullName>
                <label>Mesa Central</label>
            </value>
            <value>
                <fullName>048</fullName>
                <label>Nivel 2 Comercial Konecta</label>
            </value>
            <value>
                <fullName>049</fullName>
                <label>Nivel 2 Comercial Upcom</label>
            </value>
            <value>
                <fullName>094</fullName>
                <label>Supervisores Upcom</label>
            </value>
            <value>
                <fullName>500</fullName>
                <label>Test</label>
            </value>
            <value>
                <fullName>142</fullName>
                <label>Nuevas Conexiones</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>