force-app/main/default/objects/Interaction__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Indicates the start date of the interaction</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>