force-app/main/default/objects/Interaction__c/fields/StartDateSS__c.field-meta.xml
<CustomField>
    <fullName>StartDateSS__c</fullName>
    <description>Created Date including Seconds</description>
    <formula>TEXT(Day( DATEVALUE(StartDate__c) ))&amp;&quot;/&quot;&amp; TEXT(Month( DATEVALUE(StartDate__c) )) &amp; &quot;/&quot; &amp; TEXT(Year( DATEVALUE(StartDate__c) )) &amp; &quot; &quot; &amp; 
TEXT(VALUE(MID( TEXT( StartDate__c), 12, 2 ))-5) 
&amp; &quot;:&quot; &amp; 
MID( TEXT(StartDate__c), 15, 2 ) 
&amp; &quot;:&quot; &amp; 
MID( TEXT(StartDate__c), 18, 2 )</formula>
    <inlineHelpText>Date format: DD/MM/YYYY - HH:MM:SS</inlineHelpText>
    <label>StartDateSS</label>
    <type>Text</type>
</CustomField>