force-app/main/default/objects/Interaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status values for the interaction</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESTA000</fullName>
            </value>
            <value>
                <fullName>ESTA001</fullName>
            </value>
            <value>
                <fullName>ESTA002</fullName>
            </value>
            <value>
                <fullName>ESTA003</fullName>
            </value>
            <value>
                <fullName>ESTA004</fullName>
            </value>
            <value>
                <fullName>ESTA005</fullName>
            </value>
            <value>
                <fullName>ESTA006</fullName>
            </value>
            <value>
                <fullName>STS003</fullName>
            </value>
            <value>
                <fullName>STS004</fullName>
            </value>
            <value>
                <fullName>STS005</fullName>
            </value>
            <value>
                <fullName>ESTA007</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>