force-app/main/default/objects/Interaction__c/fields/TicketNumber__c.field-meta.xml
<CustomField>
    <fullName>TicketNumber__c</fullName>
    <description>Ticket Number</description>
    <inlineHelpText>número de tiquet</inlineHelpText>
    <label>Ticket Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>