force-app/main/default/objects/Interaction__c/fields/Ultimo_VDN__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_VDN__c</fullName>
    <label>Ultimo VDN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>