force-app/main/default/objects/Interaction__c/fields/UUI__c.field-meta.xml
<CustomField>
    <fullName>UUI__c</fullName>
    <label>UUI</label>
    <length>96</length>
    <type>Text</type>
</CustomField>