force-app/main/default/objects/Interaction__c/fields/Waiting_Time_mins__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Time_mins__c</fullName>
    <description>Tiempo de espera</description>
    <formula>(DATETIMEVALUE(AsignationDate__c) - DATETIMEVALUE(CreatedDate))*1440</formula>
    <inlineHelpText>Tiempo de espera en minutos</inlineHelpText>
    <label>Waiting Time (mins)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>