force-app/main/default/objects/Interaction__c/fields/WaitingTime__c.field-meta.xml
<CustomField>
    <fullName>WaitingTime__c</fullName>
    <label>Waiting Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>