force-app/main/default/objects/Interaction__c/recordTypes/Interaction_Peru_CTI.recordType-meta.xml
<RecordType>
    <fullName>Interaction_Peru_CTI</fullName>
    <active>true</active>
    <label>Interaction Peru CTI</label>
</RecordType>