force-app/main/default/objects/Interaction__c/recordTypes/InteractionArgentina.recordType-meta.xml
<RecordType>
    <fullName>InteractionArgentina</fullName>
    <active>true</active>
    <label>Interaction Argentina</label>
</RecordType>