force-app/main/default/objects/Interaction__c/recordTypes/InteractionBrasil.recordType-meta.xml
<RecordType>
    <fullName>InteractionBrasil</fullName>
    <active>true</active>
    <label>Interaction Brasil</label>
</RecordType>