force-app/main/default/objects/Interaction__c/recordTypes/InteractionChile.recordType-meta.xml
<RecordType>
    <fullName>InteractionChile</fullName>
    <active>true</active>
    <label>Interaction Chile</label>
</RecordType>