force-app/main/default/objects/Interaction__c/recordTypes/InteractionColombia.recordType-meta.xml
<RecordType>
    <fullName>InteractionColombia</fullName>
    <active>true</active>
    <label>Interaction Colombia</label>
</RecordType>