force-app/main/default/objects/Interaction__c/recordTypes/InteractionPeru.recordType-meta.xml
<RecordType>
    <fullName>InteractionPeru</fullName>
    <active>true</active>
    <label>Interaction Peru</label>
</RecordType>