force-app/main/default/objects/Interaction__c/validationRules/ModifyInteractionReason.validationRule-meta.xml
<ValidationRule>
    <fullName>ModifyInteractionReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(($Setup.OneOrg__c.B2C__c=true), ($Setup.OneOrg__c.B2B__c=true)),($Setup.OneOrg__c.BrasilValidationRules__c=true), ISCHANGED( Reason__c),ISPICKVAL( Status__c,&apos;ESTA003&apos;))</errorConditionFormula>
    <errorMessage>You cannot modify the Reason of an interaction if it&apos;s closed</errorMessage>
</ValidationRule>