force-app/main/default/objects/Interaction__c/listViews/NENHUMA.listView-meta.xml
<ListView>
    <fullName>NENHUMA</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>AsignationDate__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>StartDate__c</columns>
    <columns>FinishDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>MINHA LISTA</label>
</ListView>